--- a/Clases/Catedra2-Clima2/Clima2.html
+++ b/Clases/Catedra2-Clima2/Clima2.html
@@ -13,7 +13,7 @@ class: center, middle, inverse, title-slide
 # Suelo Agua Planta Clima (SAPC)
 ## Clima
 ### Francisco Zambrano
-### 2 de abril 2019
+### 19 de marzo 2019
 
 ---
 
