--- a/README.html
+++ b/README.html
@@ -314,9 +314,7 @@ $(document).ready(function () {
 </div>
 <div id="curso-sapc" class="section level1">
 <h1>Curso SAPC</h1>
-</div>
-<div id="agronomia-umayor" class="section level1">
-<h1>Agronomía UMayor</h1>
+<p>Agronomía UMayor 2019 (AGRL-1009)</p>
 <div id="resena" class="section level2">
 <h2>Reseña</h2>
 <p>El material contenido en este repositorio corresponde a las clases del curso de Suelo Agua Planta Clima, codigo AGRL-1009 para la carrera de Agronomía de la Universidad Mayor. Éste es el tercer módulo de un curso electivo donde vemos como las principales variables climáticas, características hídricas del suelo y fenología afectan la demanda de agua de la planta. Para esto se trabaja con los softwares <a href="https://www.qgis.org">QGIS</a>, <a href="https://www.nrcs.usda.gov/wps/portal/nrcs/detailfull/national/water/manage/drainage/?&amp;cid=stelprdb1045310">soil water characteristics</a> y <a href="http://www.fao.org/land-water/databases-and-software/cropwat/es/">CropWat 8</a>.</p>
