update until april 30th

--- a/Clases/Catedra4-suelo-agua/Suelo-Agua.html
+++ b/Clases/Catedra4-suelo-agua/Suelo-Agua.html
@@ -36,6 +36,7 @@ class: center, middle
 
 - Humedad aprovechable, lámina de agua, humedad disponible
 
+- Potencial de agua en el suelo
 
 ---
 class: center, middle
