update until april 30th

--- a/README.html
+++ b/README.html
@@ -347,6 +347,22 @@ $(document).ready(function () {
 <td>02/04/2019</td>
 <td><a href="https://frzambra.github.io/SAPC/Clases/Catedra3-presentaciones/JoaquinZenteno.pptx">Presentación Joaquín Zenteno</a> y <a href="https://frzambra.github.io/SAPC/Clases/Catedra3-presentaciones/SebastianFlores.pdf">Presentación Sebastían Flores</a></td>
 </tr>
+<tr class="odd">
+<td>23/04/2019</td>
+<td><a href="https://frzambra.github.io/SAPC/Talleres/Taller2/Taller2-Clima.pdf">Taller Clima 2</a></td>
+</tr>
+<tr class="even">
+<td>19/03/2019</td>
+<td><a href="https://frzambra.github.io/SAPC/Clases/Catedra2-Clima2/Clima2.html">Clima (Parte II)</a></td>
+</tr>
+<tr class="odd">
+<td>30/04/2019</td>
+<td><a href="https://frzambra.github.io/SAPC/Clases/Catedra4-anomalia-PP/anomalia-PP.html">Anomalía Precipitación</a></td>
+</tr>
+<tr class="even">
+<td>30/04/2019</td>
+<td><a href="https://frzambra.github.io/SAPC/Clases/Catedra4-suelo-agua/Suelo-Agua.html">Suelo-Agua</a></td>
+</tr>
 </tbody>
 </table>
 </div>
