update until april 30th

--- a/Clases/Catedra4-suelo-agua/Suelo-Agua.html
+++ b/Clases/Catedra4-suelo-agua/Suelo-Agua.html
@@ -191,7 +191,7 @@ Relación entre la masa y el volumen
 
 `$$\rho=\frac{m}{V}$$`
 
-- **densidad real:**  el peso por unidad de volumen de la porción sálida de suelo (sin incluir poros). La densidad aumenta con un mayor contenido de metales pesados (ej., magnetita, limonita y hematita).
+- **densidad real:**  el peso por unidad de volumen de la porción sólida de suelo (sin incluir poros). La densidad aumenta con un mayor contenido de metales pesados (ej., magnetita, limonita y hematita).
 
 - **densidad aparente:** El peso seco de suelo por unidad de volumen includio los poros.
 
