--- a/README.html
+++ b/README.html
@@ -363,6 +363,18 @@ $(document).ready(function () {
 <td>30/04/2019</td>
 <td><a href="https://frzambra.github.io/SAPC/Clases/Catedra4-suelo-agua/Suelo-Agua.html">Suelo-Agua</a></td>
 </tr>
+<tr class="odd">
+<td>7/05/2019</td>
+<td><a href="https://frzambra.github.io/SAPC/Clases/Catedra5-suelo-agua/Suelo-Agua2.html">Suelo-Agua 2</a></td>
+</tr>
+<tr class="even">
+<td>7/05/2019</td>
+<td><a href="https://frzambra.github.io/SAPC/Clases/Catedra5-suelo-agua/Suelo-Agua2.html">Suelo-Agua 3</a></td>
+</tr>
+<tr class="odd">
+<td>7/05/2019</td>
+<td><a href="https://frzambra.github.io/SAPC/Talleres/Taller3/Taller3-Suelo-Agua.pdf">Taller 3: Suelo-Agua</a></td>
+</tr>
 </tbody>
 </table>
 </div>
