Catedra planta-atmosfera

--- a/README.html
+++ b/README.html
@@ -375,6 +375,10 @@ $(document).ready(function () {
 <td>7/05/2019</td>
 <td><a href="https://frzambra.github.io/SAPC/Talleres/Taller3/Taller3-Suelo-Agua.pdf">Taller 3: Suelo-Agua</a></td>
 </tr>
+<tr class="even">
+<td>14/05/2019</td>
+<td><a href="https://frzambra.github.io/SAPC/Clases/Catedra6-Agua-Atmosfera/Agua-Atmosfera.html">Planta-Atmósfera</a></td>
+</tr>
 </tbody>
 </table>
 </div>
